--- a/Back-end/01-Basic/000-开发实践总结.md
+++ b/Back-end/01-Basic/000-开发实践总结.md
@@ -17,9 +17,9 @@ IDEA `war`还是`war exploded`模式？具体参考[Tomcat部署时war和war exp
 - war exploded 模式是直接把文件夹、jsp 页面 、classes 等等移到 Tomcat 部署文件夹里面，进行加载部署。因此这种方式**支持热部署**，一般在开发的时候也是用这种方式。
 - 两种模式下 `request.getSession().getServletContext().getRealPath("/");`获取到的路径不一致，war 模式能获取到 `webapps/appname` 的全路径，而 war exploded 模式获取到的是 IDEA 部署到的目的，通常是项目当前目录。
 
-乱码问题：
+控制台乱码问题：
 
-- 在 tomcat 下的 logging.properties 这个文件中添加 `java.util.logging.ConsoleHandler.encoding = GBK` 属性，如果已经配置则修改为 `GBK`。
+- 在 tomcat 下的 `conf/logging.properties` 这个文件中添加 `java.util.logging.ConsoleHandler.encoding = GBK` 属性，如果已经存在此配置，则将值修改为 `GBK`。
 - [Java file.encoding](https://www.cnblogs.com/virgosnail/p/10868402.html)
 
 ## 2 明确项目开发流程
