--- a/OS/09-LanguageUnderstanding/《左耳听风》：程序员练级攻略.md
+++ b/OS/09-LanguageUnderstanding/《左耳听风》：程序员练级攻略.md
@@ -1,1 +1,58 @@
 # [左耳听风](https://time.geekbang.org/column/article/8136)——程序员练级攻略
+
+主要内容：
+
+1. 开篇词
+2. 入门篇
+   1. 零基础
+   2. 启蒙正式入门
+3. 修养篇
+   1. 程序员修养
+4. 专业基础篇
+   1. 编程语言
+   2. 理论学科
+   3. 系统知识
+5. 软件设计篇
+   1. 软件设计
+6. 高手成长篇
+   1. Linux 系统、内存和网络（系统底层知识）
+   2. 异步 I/O 模型和 Lock-Free 编程（系统底层知识）
+   3. Java 底层知识
+   4. 数据库
+   5. 分布式架构入门（分布式架构）
+   6. 分布式架构经典图书和论文（分布式架构）
+   7. 分布式架构工程设计 (分布式架构)
+   8. 微服务
+   9. 容器化和自动化运维
+   10. 机器学习和人工智能
+   11. 前端基础和底层原理（前端方向）
+   12. 前端性能优化和框架（前端方向）
+   13. UI/UX 设计（前端方向）
+   14. 技术资源集散地
+
+## 0 前置阅读
+
+1. [十年学会编程](https://liuyandong.com/2017/10/25/122/)
+2. [程序员的谎谬之言还是至理名言？](https://coolshell.cn/articles/4235.html)
+
+## 1 入门篇
+
+### 1.1 零基础
+
+推荐通过学习 Python 和前端技术来入门。
+
+1. Python
+2. JavaScript
+3. Html/CSS
+4. PHP（可选）
+
+### 2.2 正式入门
+
+体验了一把编程的乐趣后，从以下方便来提升编程能力：
+
+1 提升编程技能：
+
+1. [The Key To Accelerating Your Coding Skills](http://blog.thefirehoseproject.com/posts/learn-to-code-and-be-self-reliant/)
+2. 《代码大全》
+
+2 熟悉编程工具：
