--- a/OS/09-LanguageUnderstanding/《左耳听风》：程序员练级攻略整理.md
+++ b/OS/09-LanguageUnderstanding/《左耳听风》：程序员练级攻略整理.md
@@ -30,10 +30,14 @@
    13. UI/UX 设计（前端方向）
    14. 技术资源集散地
 
+---
+
 ## 0 前置阅读
 
 1. [十年学会编程](https://liuyandong.com/2017/10/25/122/)
 2. [程序员的谎谬之言还是至理名言？](https://coolshell.cn/articles/4235.html)
+
+---
 
 ## 1 入门篇
 
@@ -58,6 +62,8 @@
 7. Web 编程入门
    1. 前端基础：[MDN Html](https://developer.mozilla.org/zh-CN/docs/Web/HTML)、[MDN CSS](https://developer.mozilla.org/zh-CN/docs/Web/CSS)、[MDN DOM 操作](https://www.w3schools.com/js/js_htmldom.asp)
    2. 后端基础：直接用 Python 或者 Node.js，或者学习[PHP](https://www.w3school.com.cn/php/index.asp)
+
+通关任务：
 
 ### 2.2 正式入门
 
@@ -103,10 +109,15 @@
 3. 像 Python 和 JavaScript 这样的动态语言用着是很爽，但是，只有像 C、C++ 和 Java 这样的静态语言才可以让你真正地进阶。
 4. 对于一个合格的程序员，掌握几门语言是非常正常的事情。一方面，这会让你对不同的语言进行比较，让你有更多的思考。另一方面，这也是一种学习能力的培养。
 
+---
+
 ## 2 程序员修养
 
-1. 有修养的程序员才可能成长为真正的工程师和架构师，而没有修养的程序员只能沦为码农。
-2. 从这些方面提升我们的修养：**英文、问问题、写代码、安全规范、软件工程与测试、编程规范**。
+有修养的程序员才可能成长为真正的工程师和架构师，而没有修养的程序员只能沦为码农。
+
+### 2.1 程序员修养相关
+
+从这些方面提升我们的修养：**英语能力、问问题的能力、写代码的技能、安全规范与意识、软件工程与测试、良好的编码规范**。
 
 相关资料：
 
@@ -130,7 +141,434 @@
    3. 《代码整洁之道》
    4. 《程序员的职业素养》
 5. **Code Review**
+   1. [Code Review Best Practices](https://medium.com/palantir/code-review-best-practices-19e02780015f)
+   2. [How Google Does Code Review](https://dzone.com/articles/how-google-does-code-review)
+   3. [LinkedIn’s Tips for Highly Effective Code Review](https://thenewstack.io/linkedin-code-review/)
+   4. Unit Test 也是程序员的一个很重要的修养：学习 JUnit 使用的最好方式就是到其官网上看 [JUnit 5 User Guide](https://junit.org/junit5/docs/current/user-guide/)。
+   5. 关于 JUnit 的其他文章：
+      1. [You Still Don’t Know How to Do Unit Testing (and Your Secret is Safe with Me)](https://stackify.com/unit-testing-basics-best-practices/)
+      2. [Unit Testing Best Practices: JUnit Reference Guide](https://dzone.com/articles/unit-testing-best-practices)
+      3. [junit-best-practices/](http://www.kyleblaney.com/junit-best-practices/)
 6. **安全防范**
+   1. 首先我们要知道 [OWASP](https://www.owasp.org/index.php/Main_Page)：
+      1. 它是一个开源的、非盈利的全球性安全组织，致力于应用软件的安全研究。其被视为 Web 应用安全领域的权威参考。2009 年，国际信用卡数据安全技术 PCI 标准将其列为必要组件，美国国防信息系统局、欧洲网络与信息安全局、美国国家安全局等政府机构所发布的美国国家和国际立法、标准、准则和行业实务守则参考引用了 OWASP。
+      2. 美国联邦贸易委员会（FTC）强烈建议所有企业需遵循 OWASP 十大 Web 弱点防护守则。所以 [OWASP Top 10 项目](https://owasp.org/www-project-top-ten/) 是程序员非常需要关注的最基本的也是最严重的安全问题，现在其已经成了一种标准。中文版参考：[OWASP Top 10 2017 10 项最严重的Web 应用程序安全风险](https://wiki.owasp.org/images/d/dc/OWASP_Top_10_2017_中文版v1.3.pdf)。
+   2. 安全编程方面的一些 Guideline
+      1. [伯克立大学的 Secure Coding Practice Guidelines](https://security.berkeley.edu/secure-coding-practice-guidelines)
+      2. [卡内基梅隆大学的 SEI CERT Coding Standards](https://wiki.sei.cmu.edu/confluence/display/seccode/SEI+CERT+Coding+Standards)
+   3. 每个程序员必须要读的一篇和 HTTP 相关的安全文章：[Hardening Your HTTP Security Headers](https://www.keycdn.com/blog/http-security-headers)
+   4. 防御性编程：
+      1. 什么是[防御性编程](https://en.wikipedia.org/wiki/Defensive_programming)？
+      2. [The Art of Defensive Programming](https://github.com/xitu/gold-miner/blob/master/TODO/the-art-of-defensive-programming.md)
+      3. [当然，防御编程也要适当](https://medium.com/@vcarl/overly-defensive-programming-e7a1b3d234c2)
 7. **软件工程和上线**
+   1. 关于测试：《完美软件：对软件测试的各种幻想》、《Google 软件测试之道》
+   2. 上线前的 Checklist：
+      1. [Server Side checklist](https://github.com/mtdvio/going-to-production/blob/master/serverside-checklist.md)
+      2. [Single Page App Checklist](https://github.com/mtdvio/going-to-production/blob/master/spa-checklist.md)
+   3. 线上监控：[Monitoring 101：最基本的监控线上运行软件的方法和实践](https://www.datadoghq.com/blog/monitoring-101-collecting-data/)
 
-代码规范参考：
+### 2.2 代码规范相关
+
+代码规范参考：在写代码时，最好参考一些已有的最佳实践。
+
+#### 编程语言相关
+
+**C语言**：
+
+- [NASA C Style](<http://homepages.inf.ed.ac.uk/dts/pm/Papers/nasa-c-style.pdf>)。
+- [C Coding Standard](<https://users.ece.cmu.edu/~eno/coding/CCodingStandard.html>)。
+- [C Programming/Structure and style](<https://en.wikibooks.org/wiki/C_Programming/Structure_and_style>)。
+- [Linux kernel coding style](<https://www.kernel.org/doc/html/latest/process/coding-style.html>)。
+- [GNU Coding Standard](<https://www.gnu.org/prep/standards/html_node/Writing-C.html>)，GNU的编码规范。
+
+**C++语言**：
+
+- [C++ Core Guidelines](<http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines>)，这个文档是各种C++的大拿包括原作者在内在持续讨论更新的和C++语言相关的各种最佳实践。
+- [Google C++ Style Guide](<https://google.github.io/styleguide/cppguide.html>)。
+
+**Go语言**：
+
+- [Effective Go](<https://golang.org/doc/effective_go.html>) ，Go的语法不复杂，所以，Go语言的最佳实践只需要看这篇官方文档就够了。
+
+**Java语言**：
+
+- [Code Conventions for the Java™ Programming Language](<http://www.oracle.com/technetwork/java/codeconvtoc-136057.html>) ，Java官方的编程规范。
+- [Google Java Style Guide](<https://google.github.io/styleguide/javaguide.html>)，Google的Java编码规范。
+
+**JavaScript语言**：
+
+- [JavaScript The Right Way](<http://jstherightway.org>) ，一个相对比较容读的JavaScript编程规范，其中不但有代码规范，还有设计模式，测试工具，编程框架，游戏引擎……
+- [Google JavaScript Style Guide](<https://google.github.io/styleguide/jsguide.html>)，Google公司的JavaScript的编码规范，一个非常大而全的编程规范。
+- [Airbnb JavaScript Style Guide](<https://github.com/airbnb/javascript>)，Airbnb的JavaScript编程规范。没Google的这么大而全，但是也很丰富了。
+- [jQuery Core Style Guide](<http://contribute.jquery.org/style-guide/js/>)，jQuery的代码规范。
+- [JavaScript Clean Code](<https://github.com/ryanmcdermott/clean-code-javascript>)，前面推荐过的《代码整洁之道》一书中的JavaScript的实践 。
+
+还有一些其它相对比较简单的JavaScript编程规范。
+
+- [JavaScript Style Guides And Beautifiers](<https://addyosmani.com/blog/javascript-style-guides-and-beautifiers/>) ，这是一篇推荐JavaScript编程规范的文章，你可以看看。
+- [JavaScript Style Guide and Coding Conventions](<https://www.w3schools.com/js/js_conventions.asp>)，这是W3Schools的JavaScript。
+- [Code Conventions for the JavaScript](<http://crockford.com/javascript/code.html>)。
+
+**PHP语言**：
+
+- [PHP FIG](<http://www.php-fig.org/psr/>)，PHP编码规范及标准推荐。
+- [PHP The Right Way](<http://www.phptherightway.com>)，除了编码规范之外的各种PHP的最佳实践，还包括一些设计模式，安全问题，以及服务部署，Docker虚拟化以及各种资源。
+- [Clean Code PHP](<https://github.com/jupeter/clean-code-php>)，《代码整洁之道》的PHP实践。
+
+**Python语言**：
+
+- [Style Guide for Python Code](<https://www.python.org/dev/peps/pep-0008/>)，Python官方的编程码规范。
+- [Google Python Style Guide](<https://google.github.io/styleguide/pyguide.html>)，Google公司的Python编码规范。
+- [The Hitchhiker’s Guide to Python](<http://docs.python-guide.org/en/latest/>)，这不只是Python的编程规范，还是Python资源的集散地，强烈推荐。
+
+**Ruby语言**：
+
+- [Ruby Style Guide](<https://github.com/airbnb/ruby>)，Airbnb公司的Ruby编程规范。
+- [Ruby Style Guide](<https://github.com/bbatsov/ruby-style-guide>) 。
+
+**Rust语言**：
+
+- [Rust Style Guide](<https://github.com/rust-lang-nursery/fmt-rfcs/blob/master/guide/guide.md>)。
+- [Rust Guidelines](<http://aturon.github.io>) 开源社区里最好的Rust编程规范。
+
+**Scala语言**：
+
+- [Scala Style Guide](<http://docs.scala-lang.org/style/>)，Scala官方的编程规范。
+- [Databricks Scala Guide](<https://github.com/databricks/scala-style-guide>) \- Databricks的Scala编程规范。
+- [Scala Best Practices](<https://github.com/alexandru/scala-best-practices>)。
+
+**Shell语言**：
+
+- [Google Shell Style Guide](<https://google.github.io/styleguide/shell.xml>)，Google的Shell脚本编程规范。
+
+**Node.js相关**：
+
+- [npm-coding-style](<https://docs.npmjs.com/misc/coding-style>)。
+- [Microsoft + Node.js Guidelines](<https://github.com/Microsoft/nodejs-guidelines>)。
+- [Node.js Style Guide](<https://github.com/felixge/node-style-guide>)。
+
+**Mozilla的编程规范**：
+
+- [Mozilla Coding Style Guide](<https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Coding_Style>)，其中包括C、C++、Java、Python、JavaScript、Makefile和SVG等编程规范。
+
+#### 前端开发相关
+
+- [CSS Guidelines](<https://cssguidelin.es>)，CSS容易学，但是不好写，这篇规范会教你如何写出一个健全的、可管理的，并可以扩展的CSS。
+- [Scalable and Modular Architecture for CSS](<https://smacss.com/>)，这是一本教你如何写出可扩展和模块化的CSS的电子书，非常不错。
+- [Frontend Guidelines](<https://github.com/bendc/frontend-guidelines>)，一些和HTML、CSS、JavaScript相关的最佳实践。
+- [Sass Guidelines](<https://sass-guidelin.es>)，Sass作为CSS的补充，其要让CSS变得更容易扩展。然而，也变得更灵活，这意味着可以被更容易滥用。这里这篇"富有主见"的规范值得你一读。
+- [Airbnb CSS / Sass Styleguide](<https://github.com/airbnb/css>)， Airbnb的CSS/Sass规范。
+- 说了Sass就不得不说LESS，这里有几篇和LESS相关的：[LESS Coding Guidelines](<https://gist.github.com/radermacher/f84b24af816111faf0ef>)、[LESS Coding Guidelines](<https://github.com/odoo/odoo/wiki/LESS-coding-guidelines>)、[LESS coding standard](<http://devdocs.magento.com/guides/v2.0/coding-standards/code-standard-less.html>)。
+- [HTML Style Guide](<https://github.com/marcobiedermann/html-style-guide>)，一个教你如何写出性能更高，结构更好，容易编程和扩展的HTML的规范。
+- [HTML + CSS Code Guide](<http://codeguide.co>)，如何写出比较灵活、耐用、可持续改进的HTML和CSS的规范。
+- [CoffeeScript Style Guide](<https://github.com/polarmobile/coffeescript-style-guide>)，CoffeeScript的最佳实践和编程规范。
+- [Google HTML/CSS Style Guide](<https://google.github.io/styleguide/htmlcssguide.html>)，Google的HTML/CSS的编程规范。
+- [Guidelines for Responsive Web Design](<https://www.smashingmagazine.com/2011/01/guidelines-for-responsive-web-design/>) ，响应式Web设计的规范和最佳实践。
+- [U.S. Web Design Standards](<https://standards.usa.gov>)，这是美国政府网端要求的一些UI交互可视化的一些规范。
+
+最后是一个前端开发的各种注意事项列表，非常有用。
+
+- [Front-End Checklist](<https://github.com/thedaviddias/Front-End-Checklist>) ，一个前端开发的Checklist，其中包括HTML、CSS和JavaScript，还和图片、字体、SEO、性能相关，还包括关一些和安全相关的事项，这个列表真的是太好了。
+
+#### 移动端相关
+
+**Kotlin**：
+
+- [Coding Conventions](<https://kotlinlang.org/docs/reference/coding-conventions.html>)。
+
+**Objective-C语言**：
+
+- [Objective-C Style guide](<https://github.com/github/objective-c-style-guide>)，Style guide & coding conventions for Objective-C projects。
+
+- [Google Objective-C Style Guide](<https://google.github.io/styleguide/objcguide.xml>)。
+
+- [NYTimes Objective-C Style Guide](<https://github.com/NYTimes/objective-c-style-guide>) ，The Objective-C Style Guide used by The New York Times。
+
+**Swift语言**：
+
+- [API Design Guidelines](<https://swift.org/documentation/api-design-guidelines/>)。
+- [Swift](<https://github.com/github/swift-style-guide>) \- 一个Swift的相关编程规范的教程。
+- [Swift style guide](<https://github.com/raywenderlich/swift-style-guide>)。
+- [Swift Style Guide](<https://github.com/linkedin/swift-style-guide>) \- LinkedIn的官方 Swift编程规范。
+- [Metova’s Swift style guide](<https://github.com/metova/swift-style-guide>)。
+- [Xmartlabs Swift Style Guide](<https://github.com/xmartlabs/Swift-Style-Guide>)，Xmartlabs的 Swift编程规范。
+
+#### API相关
+
+- [HAL](<http://stateless.co/hal_specification.html>)，一个简单的API规范教程。
+- [Microsoft REST API Guidelines](<https://github.com/Microsoft/api-guidelines>)，微软软的Rest API规范。
+- [API Design Guide](<http://apiguide.readthedocs.io/en/latest/>)。
+- [RESTful API Designing guidelines - The best practices](<https://hackernoon.com/restful-api-designing-guidelines-the-best-practices-60e1d954e7c9>)。
+- [JSON API - Recommendations](<http://jsonapi.org/recommendations>)，JSON相关的API的一些推荐实践。
+- [API Security Checklist](<https://github.com/shieldfy/API-Security-Checklist>) ，API的安全问题的检查列表。
+
+#### 开发工具相关
+
+**Markdown相关**：
+
+- [Google Markdown Style Guide](<https://github.com/google/styleguide/blob/gh-pages/docguide/style.md>)。
+- [Markdown Style Guide](<http://www.cirosantilli.com/markdown-style-guide/>)。
+
+**JSON**：
+
+- [Google JSON Style Guide](<https://google.github.io/styleguide/jsoncstyleguide.xml>)。
+- [JSON Style Guide](<http://www.w3resource.com/slides/json-style-guide.php>)。
+
+**Git相关**：
+
+- [Git Style Guide](<https://github.com/agis/git-style-guide>)。
+- [Few Rules from Git Documentation](<https://github.com/git/git/blob/master/Documentation/CodingGuidelines>)。
+
+**正则表达式相关**：
+
+- [RegexHQ](<https://github.com/regexhq>)。
+- [Learn regex the easy way](<https://github.com/zeeshanu/learn-regex>)。
+
+---
+
+## 3 专业基础篇
+
+### 3.1 编程语言
+
+1. 必学语言： C、C++ 和 Java 这三个工业级的编程语言。C 和 C++ 语言规范都由 ISO 标准化过，都有工业界厂商组成的标准化委员会来制定工业标准。次要原因是，它们已经在业界应用于许多重要的生产环境中。
+2. 推荐学习：Go 语言。参考 [GO语言、DOCKER 和新技术](https://coolshell.cn/articles/18190.html)
+
+**Java**：综合能力最强的语言
+
+入门：
+
+- 《Java 核心技术：卷 1 基础知识》
+- 《Spring 实战》
+- 《Spring Boot 实战》
+
+进阶：
+
+- 如何编写高效的代码：《Effective Java》、[Google Guava 库](https://github.com/google/guava)
+- 并发方面：《Java 并发编程实战》
+- Java 性能优化：《Java 性能权威指南》、《深入理解 Java 虚拟机》
+- 从一个宏观角度了解 Java：《Java 编程思想》
+- 深入理解 Spring：《精通 Spring 4.x》
+
+设计模式：
+
+1. 《设计模式：可复用面向对象软件的基础》【推荐】
+2. 《Head First 设计模式》【如果觉得第一本难，则看这本】
+3. 设计的模式的两个原则：
+   1. Program to an ‘interface’, not an 'implementation’
+   2. Favor ‘object composition’ over 'class inheritance’
+
+**C/C++**：
+
+C：如果你不学 C 语言，你根本没有资格说你是一个合格的程序员。
+
+1. 《C 程序设计语言》
+2. 《C 语言程序设计现代方法》
+3. 《C 陷阱与缺陷》
+
+C++：这是世界目前来说最复杂也是最难的编程语言，也是目前世界上范式最多的语言，其做得最好的范式就是 "泛型编程"，这在静态语言中，是绝对地划时代的一个事。
+
+1. 基础：《C++ Primer 中文版》
+2. 深入：《Effective C++》 和 《More Effective C++》
+3. 原理：《深度探索 C++ 对象模型 》、[《C++ 虚函数表解析》](https://coolshell.cn/articles/12165.html)、[《C++ 对象内存布局》](https://coolshell.cn/articles/12176.html)
+4. [C++ FAQ](http://www.stroustrup.com/bs_faq.html)、[C++ FAQ 中文](http://www.stroustrup.com/bsfaqcn.html)
+
+>另外还有一本《Effective Modern C++：改善C++11和C++14的42个具体做法》
+
+**GO**：
+
+1. Go 入门：
+   1. [Go by Example](<https://gobyexample.com/>)
+   2. [Go 101](<https://go101.org/article/101.html>)
+   3. [The Go Programming Language](<https://book.douban.com/subject/26337545/>)
+   4. 两篇入门文章：“[GO 语言简介（上）- 语法](<https://coolshell.cn/articles/8460.html>)” 和 “[GO 语言简介（下）- 特性](<https://coolshell.cn/articles/8489.html>)”）
+2. [Effective Go](<https://golang.org/doc/effective_go.html>)【必读】
+3. Go 并发编程的模式：
+   1. Go Concurrency Patterns（ [幻灯片](<https://talks.golang.org/2012/concurrency.slide>)和[演讲视频](<https://www.youtube.com/watch?v=f6kdp27TYZs>)）。
+   2. Advanced Go Concurrency Patterns（[幻灯片](<https://talks.golang.org/2013/advconc.slide>)、[演讲视频](<https://youtu.be/QDDwwePbDtw>)）。
+4. Go 在 GitHub 的 wiki：
+   1. [Go精华文章列表](<https://github.com/golang/go/wiki/Articles>)。
+   2. [Go相关博客列表](<https://github.com/golang/go/wiki/Blogs>)。
+   3. [Go Talks](<https://github.com/golang/go/wiki/GoTalks>)。
+   4. [Awesome Go](<https://github.com/avelino/awesome-go>)
+
+### 3.2 理论学科
+
+进入专业的编程领域，算法、数据结构、网络模型、计算机原理等这样的计算机科学专业需要学习的理论知识是必须要学习的。如果你想等我用到了再学也不晚，那么你有必要看一下这篇文章[《程序员的荒谬之言还是至理名言？》](https://coolshell.cn/articles/4235.html)。
+
+**算法**：
+
+很多公司好些用算法题当面试题来找到智商比较高的程序员：
+
+- 基础内容，相对简单，大部分都能学会，比如：`数组、链表、哈希表、二叉树、排序算法`等。
+- 进阶内容，确实比较难，大部分人学起来很痛苦，比如：`路径规划、背包问题、字符串匹配、动态规划、递归遍历`等。
+
+学习算法：
+
+1. 基础知识：《[算法](<https://book.douban.com/subject/10432347/>)》、《[算法图解](<https://book.douban.com/subject/26979890/>)》
+2. 理论加持：《[算法导论](<https://book.douban.com/subject/20432061/>)》
+3. 思维改善：《[编程珠玑](<https://book.douban.com/subject/3227098/>)》
+
+**算法训练**：
+
+1. 算法题：[LeetCode](<https://leetcode.com/>)，包括
+   1. 基础算法题：涉及到`递归（深度优先 DFS、广度优先 BFS）、用动态规划（Dynamic Programming）、折半查找（Binary Search）、回溯（Back tracing）、分治法（Divide and Conquer）、大量的对树、数组、链表、字符串和 hash 表的操作`。
+   2. 编程题：涉及到`atoi、strstr、add two nums、括号匹配、字符串乘法、通配符匹配、文件路径简化、Text Justification、反转单词等`。
+2. 参考代码：[haoel/leetcode](<https://github.com/haoel/leetcode>)
+
+探索更多的数据结构和算法：
+
+- **[List of Algorithms](<https://www.wikiwand.com/en/List_of_algorithms>)** ，这个网站罗列了非常多的算法，完全可以当成一个算法字典，或是用来开阔眼界。
+- 一个数据结构动画图的网站 [Data Structure Visualizations](<https://www.cs.usfca.edu/~galles/visualization/Algorithms.html>)。
+
+**数据结构**：
+
+1. 《[数据结构与算法分析](<https://book.douban.com/subject/1139426/>)》
+
+**其他理论基础知识**：
+
+1. 《[数据库系统概念](<https://book.douban.com/subject/1929984/>)》
+2. 《[现代操作系统](<https://book.douban.com/subject/3852290/>)》
+3. 《[计算机网络](<https://book.douban.com/subject/1391207/>)》
+4. 《[计算机程序的构造和解释](<https://book.douban.com/subject/1148282/>)》
+5. 《[编译原理](<https://book.douban.com/subject/3296317/>)》，又称龙书，此外还有虎书和鲸书，编译方面，龙书比较偏理论、一般原理。虎书主要是编译优化，鲸书是设计、实现。
+
+以后，这些理论知识可以说是计算机科学这门学科最精华的知识了，认真学习，理解其背后的逻辑和思维方式，会让你受益匪浅。
+
+### 3.3 系统知识
+
+进入专业的编程领域，学习系统知识是非常关键的一部分。
+
+**计算机操作系统**：
+
+1. 《[深入理解计算机系统](<https://book.douban.com/subject/5333562/>)》。程序员必读的一本书。
+2. [理查德·史蒂文斯（Richard Stevens）](http://www.kohala.com/start/) 的三套巨经典无比的书：
+   1. 《[Unix高级环境编程](<https://book.douban.com/subject/1788421/>)》
+   2. 《Unix网络编程》 [第1卷 套接口API](<https://book.douban.com/subject/1500149/>) 、[第2卷 进程间通信](<https://book.douban.com/subject/4118577/>)
+   3. 《[TCP/IP详解 卷I 协议](<https://book.douban.com/subject/1088054/>)》
+3. 《[Linux/Unix系统编程手册](<https://book.douban.com/subject/25809330/>)》
+4. [Linux System Programming 英文电子版](<http://igm.univ-mlv.fr/~yahya/progsys/linux.pdf>) 。其中文翻译版为 [Linux系统编程](<https://book.douban.com/subject/25828773/>)。
+
+**计算机操作系统**（简易版本，如果读得懂上面的，这四本可以忽略）：
+
+1. 《[Linux C编程一站式学习](<https://book.douban.com/subject/4141733/>)》
+2. 《[TCP/IP网络编程](<https://book.douban.com/subject/25911735/>)》
+3. 《[图解TCP/IP](<https://book.douban.com/subject/24737674/>)》，适合快速入门
+4. 《[The TCP/IP Guide](<http://www.tcpipguide.com/free/index.htm>)》
+
+**网络抓包实践**：
+
+1. 《[Wireshark数据包分析实战](<https://book.douban.com/subject/21691692/>)》
+
+**关于TCP的一系列文章**：
+
+- [Let’s code a TCP/IP stack, 1: Ethernet & ARP](<http://www.saminiir.com/lets-code-tcp-ip-stack-1-ethernet-arp/>)
+- [Let’s code a TCP/IP stack, 2: IPv4 & ICMPv4](<http://www.saminiir.com/lets-code-tcp-ip-stack-2-ipv4-icmpv4/>)
+- [Let’s code a TCP/IP stack, 3: TCP Basics & Handshake](<http://www.saminiir.com/lets-code-tcp-ip-stack-3-tcp-handshake/>)
+- [Let’s code a TCP/IP stack, 4: TCP Data Flow & Socket API](<http://www.saminiir.com/lets-code-tcp-ip-stack-4-tcp-data-flow-socket-api/>)
+- [Let’s code a TCP/IP stack, 5: TCP Retransmission](<http://www.saminiir.com/lets-code-tcp-ip-stack-5-tcp-retransmission/>)
+
+**系统知识学习要点**：
+
+- 用这些系统知识操作一下文件系统，实现一个可以拷贝目录树的小程序。
+- 用fork / wait / waitpid写一个多进程的程序，用pthread写一个多线程带同步或互斥的程序。比如，多进程购票的程序。
+- 用signal / kill / raise / alarm / pause / sigprocmask实现一个多进程间的信号量通信的程序。
+- 学会使用gcc和gdb来编程和调试程序（参看作者的《**用gdb调试程序**》[一](<https://blog.csdn.net/haoel/article/details/2879>)、[二](<https://blog.csdn.net/haoel/article/details/2880>)、[三](<https://blog.csdn.net/haoel/article/details/2881>)、[四](<https://blog.csdn.net/haoel/article/details/2882>)、[五](<https://blog.csdn.net/haoel/article/details/2883>)、[六](<https://blog.csdn.net/haoel/article/details/2884>)、[七](<https://blog.csdn.net/haoel/article/details/2885>)）。
+- 学会使用makefile来编译程序（参看作者的《**跟我一起写makefile**》[一](<https://blog.csdn.net/haoel/article/details/2886>)、[二](<https://blog.csdn.net/haoel/article/details/2887>)、[三](<https://blog.csdn.net/haoel/article/details/2888>)、[四](<https://blog.csdn.net/haoel/article/details/2889>)、[五](<https://blog.csdn.net/haoel/article/details/2890>)、[六](<https://blog.csdn.net/haoel/article/details/2891>)、[七](<https://blog.csdn.net/haoel/article/details/2892>)、[八](<https://blog.csdn.net/haoel/article/details/2893>)、[九](<https://blog.csdn.net/haoel/article/details/2894>)、[十](<https://blog.csdn.net/haoel/article/details/2895>)、[十一](<https://blog.csdn.net/haoel/article/details/2896>)、[十二](<https://blog.csdn.net/haoel/article/details/2897>)、[十三](<https://blog.csdn.net/haoel/article/details/2898>)、[十四](<https://blog.csdn.net/haoel/article/details/2899>)）。
+- Socket的进程间通信。用C语言写一个1对1的聊天小程序，或是一个简单的HTTP服务器。
+
+**C10K 问题**：了解这个问题，并了解操作系统是如何通过多路复用的技术来解决这个问题的，有助于你了解各种I/O和异步模型，这对于你未来的编程和架构能力是相当重要的。
+
+1. “[C10K Problem](<http://www.kegel.com/c10k.html>) （[中文翻译版](<https://www.oschina.net/translate/c10k>)）” 的本质上是**操作系统处理大并发请求的问题**。对于Web时代的操作系统而言，对于客户端过来的大量的并发请求，需要创建相应的服务进程或线程。这些进程或线程多了，导致数据拷贝频繁（缓存I/O、内核将数据拷贝到用户进程空间、阻塞）， 进程/线程上下文切换消耗大，从而导致资源被耗尽而崩溃。这就是C10K问题的本质。
+2. 整个世界都在解决C10M问题，推荐看看：[The Secret To 10 Million Concurrent Connections -The Kernel Is The Problem, Not The Solution](<http://highscalability.com/blog/2013/5/13/the-secret-to-10-million-concurrent-connections-the-kernel-i.html>)
+
+---
+
+## 4 软件设计
+
+学习软件设计的**方法、理念、范式和模式**，是让你从一个程序员通向工程师的必备技能。如果你想成为一名优秀的程序员，软件设计定是你的必修课。
+
+**编程范式**：学习编程范式可以让你明白编程的本质和各种语言的编程方式。
+
+编程范式游记：
+
+- [编程范式游记（1）- 起源](<https://time.geekbang.org/column/article/301>)
+- [编程范式游记（2）- 泛型编程](<https://time.geekbang.org/column/article/303>)
+- [编程范式游记（3）- 类型系统和泛型的本质](<https://time.geekbang.org/column/article/2017>)
+- [编程范式游记（4）- 函数式编程](<https://time.geekbang.org/column/article/2711>)
+- [编程范式游记（5）- 修饰器模式](<https://time.geekbang.org/column/article/2723>)
+- [编程范式游记（6）- 面向对象编程](<https://time.geekbang.org/column/article/2729>)
+- [编程范式游记（7）- 基于原型的编程范式](<https://time.geekbang.org/column/article/2741>)
+- [编程范式游记（8）- Go 语言的委托模式](<https://time.geekbang.org/column/article/2748>)
+- [编程范式游记（9）- 编程的本质](<https://time.geekbang.org/column/article/2751>)
+- [编程范式游记（10）- 逻辑编程范式](<https://time.geekbang.org/column/article/2752>)
+- [编程范式游记（11）- 程序世界里的编程范式](<https://time.geekbang.org/column/article/2754>)
+
+其他编程范式资料：
+
+1. [Wikipedia: Programming paradigm](<https://en.wikipedia.org/wiki/Programming_paradigm>)、[Wikipedia: Programming paradigm 中文](https://zh.wikipedia.org/wiki/%E7%BC%96%E7%A8%8B%E8%8C%83%E5%9E%8B)，顺着这个页面看下去，可以看到很多很多有用的和编程相关的知识。
+2. [Six programming paradigms that will change how you think about coding](<https://www.ybrikman.com/writing/2014/04/09/six-programming-paradigms-that-will/>)，中文翻译版为 [六个编程范型将改变你对编程的看法](<https://my.oschina.net/editorial-story/blog/890965>)：
+   1. 默认支持并发（Concurrent by default）
+   2. 依赖类型（Dependent types）
+   3. 连接性语言（Concatenative languages）
+   4. 声明式编程（Declarative programming）
+   5. 符号式编程（Symbolic programming）
+   6. 基于知识的编程（Knowledge-based programming）
+3. [Programming Paradigms for Dummies: What Every Programmer Should Know](<https://www.info.ucl.ac.be/~pvr/VanRoyChapter.pdf>) 
+4. [斯坦福大学公开课：编程范式](<http://open.163.com/special/opencourse/paradigms.html>)，这是一门比较基础且很详细的课程，适合学习编程语言的初学者。
+
+**一些软件设计的相关原则**：
+
+**一些软件设计的读物**：
+
+1. [Don’t Repeat Yourself (DRY)](<http://en.wikipedia.org/wiki/Don%27t_repeat_yourself>)
+2. [Keep It Simple, Stupid(KISS)](<http://en.wikipedia.org/wiki/KISS_principle>)
+3. 【Program to an interface, not an implementation：注重接口，而不是实现，依赖接口，而不是实现】、【 Composition over inheritance（喜欢组合而不是继承）】
+4. [You Ain’t Gonna Need It (YAGNI)](<http://en.wikipedia.org/wiki/You_Ain%27t_Gonna_Need_It>)
+5. [Law of Demeter](<http://en.wikipedia.org/wiki/Principle_of_Least_Knowledge>)
+6. [面向对象的S.O.L.I.D 原则](<https://zh.wikipedia.org/zh-hans/SOLID_(%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E8%AE%BE%E8%AE%A1)>)
+   1. SRP（Single Responsibility Principle）- 职责单一原则
+   2. OCP（Open/Closed Principle）- 开闭原则
+   3. LSP（Liskov substitution principle）- 里氏代换原则
+   4. ISP（Interface Segregation Principle ）- 接口隔离原则
+   5. DIP（Dependency Inversion Principle）- 依赖倒置原则
+7. [CCP（Common Closure Principle） - 共同封闭原则](<http://c2.com/cgi/wiki?CommonClosurePrinciple>)
+8. [CRP（Common Reuse Principle）- 共同重用原则](<http://c2.com/cgi/wiki?CommonReusePrinciple>)
+9. [好莱坞原则 - Hollywood Principle](<http://en.wikipedia.org/wiki/Hollywood_Principle>)，好莱坞原则就是[IoC（Inversion of Control）](<http://en.wikipedia.org/wiki/Inversion_of_Control>) 或[DI（Dependency Injection）](<https://martinfowler.com/articles/injection.html>)的基础原则。
+10. [高内聚， 低耦合& - High Cohesion & Low/Loose coupling](<http://en.wikipedia.org/wiki/Coupling_(computer_science)>)
+11. [CoC（Convention over Configuration）- 惯例优于配置原则](<http://en.wikipedia.org/wiki/Convention_over_Configuration>)
+12. [SoC (Separation of Concerns) - 关注点分离](<http://sulong.me/archives/99>)
+13. [DbC（Design by Contract）- 契约式设计](<http://en.wikipedia.org/wiki/Design_by_contract>)
+14. [ADP（Acyclic Dependencies Principle）- 无环依赖原则](<http://c2.com/cgi/wiki?AcyclicDependenciesPrinciple>)
+
+**一些软件设计的读物**：
+
+1. 《[领域驱动设计](<https://book.douban.com/subject/26819666/>)》
+2. 《[UNIX编程艺术](<https://book.douban.com/subject/1467587/>)》
+3. Clean Architecture
+   1. 《[Clean Architecture](<https://8thlight.com/blog/uncle-bob/2012/08/13/the-clean-architecture.html>)》
+   2. 《[Clean Code](<https://book.douban.com/subject/5442024/>)》
+   3. 《[The Clean Coder](<https://book.douban.com/subject/11614538/>)》
+   4. 《[Clean Architecture](<https://book.douban.com/subject/26915970/>)》
+4. 12-Factor 为构建SaaS 应用提供了方法论：[The Twelve-Factor App](<https://12factor.net/>)，（[中译版](<https://12factor.net/zh_cn/>)） 这篇文章在业内的影响力很大，必读。
+5. [Avoid Over Engineering](<https://medium.com/@rdsubhas/10-modern-software-engineering-mistakes-bc67fbef4fc8>)
+6. [Instagram Engineering’s 3 rules to a scalable cloud application architecture](<https://medium.com/@DataStax/instagram-engineerings-3-rules-to-a-scalable-cloud-application-architecture-c44afed31406>) ，Instagram 工程的三个黄金法则：
+   1. 使用稳定可靠的技术（迎接新的技术）；
+   2. 不要重新发明轮子；
+   3. Keep it very simple。
+7. [How To Design A Good API and Why it Matters - Joshua Bloch](<https://www.infoq.com/presentations/effective-api-design>) ，Google的一个分享，关于如何设计好一个API。
+8. 关于Restful API的设计，你可以学习并借鉴一下下面这些文章。
+   1. [Best Practices for Designing a Pragmatic RESTful API](<https://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api>)
+   2. [Ideal REST API design](<https://betimdrenica.wordpress.com/2015/03/09/ideal-rest-api-design/>)
+   3. [HTTP API Design Guide](<https://github.com/interagent/http-api-design>)
+   4. [Microsoft REST API Guidelines](<https://github.com/Microsoft/api-guidelines/blob/vNext/Guidelines.md>)
+   5. [IBM Watson REST API Guidelines](<https://github.com/watson-developer-cloud/api-guidelines>)
+   6. [Zalando RESTful API and Event Scheme Guidelines](<https://opensource.zalando.com/restful-api-guidelines/>)
+9. [The Problem With Logging](<https://blog.codinghorror.com/the-problem-with-logging/>)：关于程序打日志的短文，可以让你知道一些可能以往不知道的打日志需要注意的问题
+10. [Concurrent Programming for Scalable Web Architectures](<http://berb.github.io/diploma-thesis/community/index.html>) ，这是一本在线的免费书，教你如何架构一个可扩展的高性能的网站。其中谈到了一些不错的设计方法和知识。
+
+---
+
+## 5 高手成长篇
+
+- [ ] todo
