--- a/OS/09-LanguageUnderstanding/《左耳听风》：程序员练级攻略整理.md
+++ b/OS/09-LanguageUnderstanding/《左耳听风》：程序员练级攻略整理.md
@@ -1,5 +1,7 @@
 # [左耳听风](https://time.geekbang.org/column/article/8136)——程序员练级攻略资料整理
 
+>只做学习资料整理，具体介绍与每一阶段的项目实战参考原文。
+
 主要步骤：
 
 1. 开篇词
@@ -62,8 +64,6 @@
 7. Web 编程入门
    1. 前端基础：[MDN Html](https://developer.mozilla.org/zh-CN/docs/Web/HTML)、[MDN CSS](https://developer.mozilla.org/zh-CN/docs/Web/CSS)、[MDN DOM 操作](https://www.w3schools.com/js/js_htmldom.asp)
    2. 后端基础：直接用 Python 或者 Node.js，或者学习[PHP](https://www.w3school.com.cn/php/index.asp)
-
-通关任务：
 
 ### 2.2 正式入门
 
