--- a/C&CPP/02-CPP-Basic/17-顺序容器.md
+++ b/C&CPP/02-CPP-Basic/17-顺序容器.md
@@ -5,19 +5,20 @@
 
 C++提供了以下容器：
 
-- vector：可变大小的数组，支持随机访问，尾部之外的位置插入元素速度可能很慢   
+- vector：可变大小的数组，支持随机访问，尾部之外的位置插入元素速度可能很慢
 - deque：双端队列，支持随机访问，头尾位置插入元素速度快
 - list：双向链表
 - forward_list：单向链表，forward_list设计目的是达到与手写单向链表数据结构相当的性能
 - array：固定大小的数组，不同添加和删除元素，相比数组，array是一种更加安全更易使用的数组类型
 - string：与vector类似的数组，专门用于存储char
 
-**通常情况下应该使用vector，除非你有更好的选择**
+**通常情况下应该使用vector，除非你有更好的选择。**
 
 ---
 ## 2 容器库概述
 
 容器上的操作可以整理为：
+
 - 所有容器都支持的操作
 - 针对特定容器支持的操作
 - 大多数元素都可以保存在容器中，但某些容器的操作对容器元素的类型有特殊要求
@@ -381,13 +382,12 @@ compare 函数返回下面列出的三种可能值之一：
 - `A a(c);`    创建一个名为 a 的新适配器,初始化为容器 c 的副本
 - **关系操作符**：所有适配器都支持全部关系操作符: ==、 !=、 <、 <=、>、>=
 
-
 ### 6.1  适配器的初始化
 
 所有适配器都定义了两个构造函数：默认构造函数用于创建空对象，而带一个容器参数的构造函数将参数容器的副本作为其基础值。
 例如，假设 deq 是 `deque<int>` 类型的容器，则可用 deq 初始化一个新的栈：
 
-```
+```cpp
 stack<int> stk(deq);
 ```
 
@@ -396,7 +396,7 @@ stack<int> stk(deq);
 默认的 stack 和 queue 都基于 deque 容器实现，而 priority_queue 则在 vector 容器上实现。在创建适配器时，
 通过将一个顺序容器指定为适配器的第二个类型实参，可覆盖其关联的基础容器类型：
 
-```
+```cpp
 //在vector之上实现的空栈。
 stack< string, vector<string> > str_stk;
 //stk 2是在vector上实现的，并持有svec的副本。
@@ -421,7 +421,6 @@ stack<string, vector<string> > str_stk2(svec);
 - `s.top()`    返回栈顶元素的值，但不删除该元素
 - `s.push(item)`    在栈顶压入新元素
 
-
 队列和优先级队列支持的操作：
 
 - `q.empty()`    如果队列为空，则返回 true，否则返回 false
@@ -431,5 +430,3 @@ stack<string, vector<string> > str_stk2(svec);
 - `q.back()`    返回队尾元素的值，但不删除该元素该操作只适用于队列
 - `q.top()`    返回具有最高优先级的元素值，但不删除该元素该操作只适用于优先级队列
 - `q.push(item)`    对于 queue，在队尾压入一个新元素，对于 priority_quue，在基于优先级的适当位置插入新元素
-
-
