--- a/Java/06-JVM/04-虚拟机性能监控与故障处理工具.md
+++ b/Java/06-JVM/04-虚拟机性能监控与故障处理工具.md
@@ -1,8 +1,9 @@
-#  虚拟机性能监控与监视工具
+# 虚拟机性能监控与监视工具
 
-**给一个系统定位问题，知识、经验是关键基础，数据是依据，工具是运用知识处理数据的手段。**
+**给一个系统定位问题，知识、经验是关键基础，数据是依据，工具是运用知识处理数据的手段**。
 
 ---
+
 ## 1 JDK 命令行工具
 
 - jmx `Java Management Extensions`即Java管理扩展
@@ -14,7 +15,8 @@
 - jstack 显示虚拟机的线程快照
 
 ---
+
 ## 2 可视化工具
 
-- JConsole 启动命令 jconsole
-- VisualVM 启动命令 jvisualvm
+- JConsole：启动命令 jconsole
+- VisualVM：启动命令 jvisualvm
